Add calendar to daily

--- a/src/i18n/data.json
+++ b/src/i18n/data.json
@@ -24,9 +24,9 @@
     "chart.production.power.title": "Daily power production",
     "chart.production.voltage.title": "Daily voltage trend",
     "chart.production.current.title": "Daily current trend",
-    "chart.production.power.subtitle": "Day {day}",
-    "chart.production.voltage.subtitle": "Day {day}",
-    "chart.production.current.subtitle": "Day {day}",
+    "chart.production.power.subtitle": "Day: ",
+    "chart.production.voltage.subtitle": "Day: ",
+    "chart.production.current.subtitle": "Day: ",
     "chart.production.power.label": "Power",
     "chart.production.voltage.label": "Volts",
     "chart.production.current.label": "Current",
@@ -90,9 +90,9 @@
     "chart.production.power.title": "Produzione giornaliera",
     "chart.production.voltage.title": "Andamento del voltaggio",
     "chart.production.current.title": "Andamento degli ampere",
-    "chart.production.power.subtitle": "Giorno {day}",
-    "chart.production.voltage.subtitle": "Giorno {day}",
-    "chart.production.current.subtitle": "Giorno {day}",
+    "chart.production.power.subtitle": "Giorno: ",
+    "chart.production.voltage.subtitle": "Giorno: ",
+    "chart.production.current.subtitle": "Giorno: ",
     "chart.production.power.label": "Watt",
     "chart.production.voltage.label": "Volts",
     "chart.production.current.label": "Ampere",
