--- a/src/i18n/data.json
+++ b/src/i18n/data.json
@@ -99,7 +99,24 @@
     "configuration.email.notification.update":"Update notification settings",
 
     "configuration.save.success": "Configuration saved successfully",
-    "configuration.save.failed": "Failed to save configuration <br>{err}"
+    "configuration.save.failed": "Failed to save configuration <br>{err}",
+
+    "configuration.smtpserver.title": "Settings server SMTP",
+    "configuration.smtpserver.subtitle": "To receive notification you need configure SMTP server",
+    "configuration.smtpserver.update": "Update data of server SMTP",
+
+    "configuration.email.notification.subject.label": "Subject",
+    "configuration.email.notification.subject.default": "Iverter notification",
+
+    "configuration.email.notification.problem.label": "Message for problem",
+    "configuration.email.notification.problem.helper": "This is the text sended when problem is raised on your inverter!",
+    "configuration.email.notification.problem.default": "A problem is raised on your inverter:",
+
+    "configuration.email.notification.no_problem.label": "Message for problem solved",
+    "configuration.email.notification.no_problem.helper": "This is the text sended when problem is solved on your inverter!",
+    "configuration.email.notification.no_problem.default": "A problem is restored on your inverter:"
+
+
   },
   "it": {
     "menu.sidebar.home": "Home",
@@ -201,6 +218,22 @@
     "configuration.email.notification.update":"Aggiorna dati notifica",
 
     "configuration.save.success": "Configurazione salvata correttamente",
-    "configuration.save.failed": "Errore al salvataggio configurazione {br}{err}"
+    "configuration.save.failed": "Errore al salvataggio configurazione {br}{err}",
+
+    "configuration.smtpserver.title": "Impostazioni server SMTP",
+    "configuration.smtpserver.subtitle": "Per ricevere qualsiasi tipo di notifica è necessario configurare il server SMTP",
+    "configuration.smtpserver.update": "Aggiorna i dati del server SMTP",
+
+    "configuration.email.notification.subject.label": "Soggetto",
+    "configuration.email.notification.subject.default": "Notifica inverter",
+
+    "configuration.email.notification.problem.label": "Messaggio per rilevmento problema",
+    "configuration.email.notification.problem.helper": "Questo testo viene inviato quando c'è un problema al tuo inverter!",
+    "configuration.email.notification.problem.default": "Un problema è stato rilevato sull'inverter:",
+
+    "configuration.email.notification.no_problem.label": "Messaggio per ripristino problema",
+    "configuration.email.notification.no_problem.helper": "Questo testo viene inviato quando un problema al tuo inverter viene ripristinato!",
+    "configuration.email.notification.no_problem.default": "E' stato ripristinato lo stato del tuo inverter:"
+
   }
 }
