--- a/src/i18n/data.json
+++ b/src/i18n/data.json
@@ -121,7 +121,9 @@
     "configuration.email.notification.no_problem.helper": "This is the text sended when problem is solved on your inverter!",
     "configuration.email.notification.no_problem.default": "A problem is restored on your inverter:",
 
-    "home.fab.tooltip": "Locally save current layouts of this page"
+    "home.fab.tooltip": "Locally save current layouts of this page",
+
+    "page.intro": "<div><h2>Introduction</h2><div>To install this Web App activate the chrome features <b> Desktop PWAs</b></div><div>Copy this link and paste in your browser</div><div>chrome://flags/#enable-desktop-pwas</div></div>"
   },
   "it": {
     "layouts.set": "Il layout è stato salvato sul dispositivo",
@@ -246,6 +248,8 @@
     "configuration.email.notification.no_problem.helper": "Questo testo viene inviato quando un problema al tuo inverter viene ripristinato!",
     "configuration.email.notification.no_problem.default": "E' stato ripristinato lo stato del tuo inverter:",
 
-    "home.fab.tooltip": "Salva localmente i layouts di questa pagina"
+    "home.fab.tooltip": "Salva localmente i layouts di questa pagina",
+
+    "page.intro": "<div><h2>Introduzione</h2><div>Per installare questa WebApp è necessario abilitare questa features di Chrome <b> Desktop PWAs</b></div><div>Copia incolla questo link sul browser </div><div>chrome://flags/#enable-desktop-pwas</div></div>"
   }
 }
