--- a/src/i18n/data.json
+++ b/src/i18n/data.json
@@ -31,12 +31,18 @@
     "chart.production.power.title": "Daily power production",
     "chart.production.voltage.title": "Daily voltage trend",
     "chart.production.current.title": "Daily current trend",
+    "chart.production.battery.title": "Battery",
+
     "chart.production.power.subtitle": "Day: ",
     "chart.production.voltage.subtitle": "Day: ",
     "chart.production.current.subtitle": "Day: ",
+    "chart.production.battery.subtitle": "Day: ",
+
     "chart.production.power.label": "Power",
     "chart.production.voltage.label": "Volts",
     "chart.production.current.label": "Current",
+    "chart.production.battery.label": "Volts",
+
 
     "informative.total.lifetime.title": "Total lifetime production",
     "informative.total.yearly.title": "Total yearly production",
@@ -162,12 +168,17 @@
     "chart.production.power.title": "Produzione giornaliera",
     "chart.production.voltage.title": "Andamento del voltaggio",
     "chart.production.current.title": "Andamento degli ampere",
+    "chart.production.battery.title": "Batteria",
+
     "chart.production.power.subtitle": "Giorno: ",
     "chart.production.voltage.subtitle": "Giorno: ",
     "chart.production.current.subtitle": "Giorno: ",
+    "chart.production.battery.subtitle": "Giorno: ",
+
     "chart.production.power.label": "Watt",
     "chart.production.voltage.label": "Volts",
     "chart.production.current.label": "Ampere",
+    "chart.production.battery.label": "Volts",
 
     "informative.total.lifetime.title": "Produzione totale",
     "informative.total.yearly.title": "Produzione annuale",
