Fix websoket port and notification

--- a/src/i18n/data.json
+++ b/src/i18n/data.json
@@ -144,7 +144,7 @@
     "websocket.error": "Error on realtime push notification <br>Not connected!",
 
     "websocket.inverter.message.error": "Inverter change starteS <br>Data: {hStr} <br>Alarm: {alarm} - Channel 1: {ch1state} - Channel 2: {ch2state} - Stato: {state}. ",
-    "websocket.centraline.message.error": "Centraline error <br>Data: {hStr} <br>Time settings: {fixedTime} - SD: {sdStarted} - WIFI: {wifiConnected} - File saved: {isFileSaveOK} {sdWrongReadNumber}. "
+    "websocket.centraline.message.error": "Centraline error <br>Data: {hStr} <br>Time settings: {fixedTime} - SD: {sdStarted}</br>WIFI: {wifiConnected} - File saved: {isFileSaveOK} </br>SD wrong read/write number: {sdWrongReadNumber}. "
   },
   "it": {
     "layouts.set": "Il layout è stato salvato sul dispositivo",
@@ -289,7 +289,7 @@
     "websocket.open": "Notifiche push attive",
     "websocket.close": "Notifiche push disattivate",
     "websocket.error": "Errore sulle notifiche push <br>Impossibile stabilire una connessione",
-    "websocket.centraline.message.error": "Errore di centralina <br>Data: {hStr} <br>Ora settata: {fixedTime} - SD: {sdStarted} - WIFI: {wifiConnected} - File saved: {isFileSaveOK} {sdWrongReadNumber}. ",
-    "websocket.inverter.message.error": "Cambio stato inverter <br>Data: {hStr} <br>Alarm: {alarm} - Channel 1: {ch1state} - Channel 2: {ch2state} - Stato: {state}. "
+    "websocket.centraline.message.error": "Errore di centralina <br>Data: {hStr} <br>Ora settata: {fixedTime} - SD: {sdStarted}</br> WIFI: {wifiConnected} - File salvati: {isFileSaveOK} </br>Letture/scritture errate sulla SD: {sdWrongReadNumber}. ",
+    "websocket.inverter.message.error": "Cambio stato inverter <br>Data: {hStr} <br>Alarm: {alarm} - Channel 1: {ch1state} - Channel 2: {ch2state} - Stato: {state}."
   }
 }
