Add realtime management

--- a/src/i18n/data.json
+++ b/src/i18n/data.json
@@ -198,7 +198,7 @@
     "informative.total.weekly.title": "Produzione settimanale",
     "informative.total.daily.title": "Produzione giornaliera",
 
-    "informative.realtime.power.title": "Produzione corrente",
+    "informative.realtime.power.title": "Produzione in tempo reale",
 
     "chart.monthly.production.label": "Watt giornalieri",
 
